--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <h2>Machine Learning Engineer | AI Developer | Data Enthusiast</h2>
                     <div class="social-links">
                         <a href="https://github.com/Heischidi" target="_blank"><i class="fab fa-github"></i></a>
-                        <a href="https://linkedin.com/in/chidiebere-ejikonye" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/chidiebere-ejikonye-b65691245/" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="mailto:ejikonyechidiebere@gmail.com"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
